# samples

./: README.md
src/csharp/: .gitignore  Harp.Sample.slnx  README.md
src/csharp/Harp.Approver/: Harp.Approver.csproj  Program.cs
src/csharp/Harp.Common/: ArtifactPlain.cs  ArtifactWire.cs  CanonicalJson.cs  Crypto.cs  Decision.cs  DecisionSignable.cs  EncBlob.cs  Harp.Common.csproj  NonceJournalStore.cs  NsecAead.cs
src/csharp/Harp.Enforcer/: Harp.Enforcer.csproj  Program.cs
src/csharp/Harp.Executor/: Harp.Executor.csproj  Program.cs
src/go/: README.md  go.mod
src/node/: README.md  harp-approver.mjs  harp-enforcer.mjs  harp-executor.mjs  package.json
src/node/lib/: canonical-json.mjs  crypto-helpers.mjs  nonce-journal.mjs
src/python/: .gitignore  README.md  harp_approver.py  harp_enforcer.py  harp_executor.py  requirements.txt
src/python/harp/: __init__.py  canonical_json.py  crypto_helpers.py  nonce_journal.py
src/rust/: Cargo.toml  README.md
src/rust/src/: canonical_json.rs  crypto_helpers.rs  lib.rs  models.rs  nonce_journal.rs
src/spec/: README.md
src/spec/core/: HARP_CORE_RFC_Draft_v0_2.md  HARP_CORE_Test_Vectors_v0_2.md  harp-core-artifact.schema.json  harp-core-decision.schema.json
src/spec/gateway/: HARP_GATEWAY_HTTP_BINDING_v0_2.md  HARP_GATEWAY_RFC_Draft_v0_2.md  README.md
src/spec/governance/: HARP_GOVERNANCE_RFC_Draft_v0_2.md
src/spec/infrastructure/: HARP_COMPLIANCE_RFC_Draft_v0_2.md  HARP_KEYMGMT_RFC_Draft_v0_2.md  HARP_THREATMODEL_RFC_Draft_v0_2.md  (+1 more)
src/typescript/: .gitignore  README.md  package.json  tsconfig.json
(+43 files in other folders)
