[package]
name = "harp-rust"
version = "0.2.0"
edition = "2021"
description = "HARP Rust Reference Implementation — Human Authorization & Review Protocol"

[[bin]]
name = "harp-executor"
path = "src/bin/harp_executor.rs"

[[bin]]
name = "harp-approver"
path = "src/bin/harp_approver.rs"

[[bin]]
name = "harp-enforcer"
path = "src/bin/harp_enforcer.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
